--- a/index.html
+++ b/index.html
@@ -5,11 +5,111 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pet Store</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/all.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 
+
+<!-- Header/NAV Bar Section -->
+
+<div class="container">
+	<header class="row">
+		<div class="col-xs-8 col-sm-4 col-md-6 centered">
+			<img src="img/petstore_logo.png" alt="Pet Store Logo" class="pull-left logo">
+			<h1 class="pull-left text-center">Pet Store</h1>
+		</div>
+
+		<nav class="col-xs-12 col-sm-7 col-md-6">
+			<ul class="nav nav-pills pull-right">
+				<li role="presentation" class="active"><a href="index.html">Home</a></li>
+				<li role="presentation"><a href="#">Products</a></li>
+				<li role="presentation"><a href="contact.html">Contact Us</a></li>
+			</ul>
+		</nav>
+
+	</header>
+</div>
+
+<!-- End of Header/NAV Bar Section -->
+<!-- JUMBOTRON Section -->
+
+<div class="jumbotron">
+	<div class="container text-center text-uppercase">
+		<h2>The Products they love. Prices that you like.</h2>
+	</div>
+</div>
+
+<!-- End JUMBOTRON -->
+<!-- START FEATURE/ASIDE Section -->
+
+<section class="container">
+	<div class="row">
+		<div class="col-sm-6 text-justify featured">
+			<div class="row">
+				<h2 class="text-uppercase">Featured</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint quis laborum repellat omnis officia.</p>
+			</div>
+			<div class="row">
+				<div class="col-sm-4 product">
+					<div class="row">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="Dog Bowl" class="img-responsive"></div>
+						<div class="col-sm-12 col-xs-6">
+							<h4>Dog Bowl</h4>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+							<button class="btn btn-xs center-block">Purchase Now</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 product">
+					<div class="row">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product2.jpg" alt="Cat Toy" class="img-responsive"></div>
+						<div class="col-sm-12 col-xs-6">
+							<h4>Cat Toys</h4>
+							<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+							<button class="btn btn-xs center-block">Purchase Now</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-4 product">
+					<div class="row">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product3.jpg" alt="Bird Toy" class="img-responsive"></div>
+						<div class="col-sm-12 col-xs-6">
+							<h4>Bird Toys</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+							<button class="btn btn-xs center-block">Purchase Now</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<aside class="col-sm-6">
+			<h2 class="text-center text-uppercase">Services</h2>
+			<ul class="nav nav-pills nav-stacked text-center">
+				<li role="presentation">
+					<a href="#" class="text-uppercase">Adopt a dog</a>
+					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+				</li>
+				<li role="presentation">
+					<a href="#" class="text-uppercase">Adopt a cat</a>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</li>
+				<li role="presentation">
+					<a href="#" class="text-uppercase">Adopt a fish</a>
+					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+				</li>
+			</ul>
+		</aside>
+	</div>
+</section>
+
+<!-- End FEATURE/ASIDE Section -->
+<!-- START FOOTER -->
+
+footer.
+
+<!-- END FOOTER -->
 	<!-- scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
