--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 		<nav class="col-xs-12 col-sm-7 col-md-6">
 			<ul class="nav nav-pills pull-right">
 				<li role="presentation" class="active"><a href="index.html">Home</a></li>
-				<li role="presentation"><a href="#">Products</a></li>
-				<li role="presentation"><a href="contact.html">Contact Us</a></li>
+				<li role="presentation" class="nav-btn-deco"><a href="#">Products</a></li>
+				<li role="presentation" class="nav-btn-deco"><a href="contact.html">Contact Us</a></li>
 			</ul>
 		</nav>
 
@@ -43,7 +43,7 @@
 <!-- End JUMBOTRON -->
 <!-- START FEATURE/ASIDE Section -->
 
-<section class="container">
+<section class="container product-container">
 	<div class="row">
 		<div class="col-sm-6 text-justify featured">
 			<div class="row">
@@ -52,17 +52,18 @@
 			</div>
 			<div class="row">
 				<div class="col-sm-4 product">
-					<div class="row">
+					<div class="row product-col">
 						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="Dog Bowl" class="img-responsive"></div>
 						<div class="col-sm-12 col-xs-6">
 							<h4>Dog Bowl</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur.</p> 
+							<!-- lorem spacing is different here. why? -->
 							<button class="btn btn-xs center-block">Purchase Now</button>
 						</div>
 					</div>
 				</div>
 				<div class="col-sm-4 product">
-					<div class="row">
+					<div class="row product-col">
 						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product2.jpg" alt="Cat Toy" class="img-responsive"></div>
 						<div class="col-sm-12 col-xs-6">
 							<h4>Cat Toys</h4>
@@ -72,7 +73,7 @@
 					</div>
 				</div>
 				<div class="col-sm-4 product">
-					<div class="row">
+					<div class="row product-col">
 						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product3.jpg" alt="Bird Toy" class="img-responsive"></div>
 						<div class="col-sm-12 col-xs-6">
 							<h4>Bird Toys</h4>
@@ -85,18 +86,18 @@
 		</div>
 
 		<aside class="col-sm-6">
-			<h2 class="text-center text-uppercase">Services</h2>
+			<h2 class="text-center text-uppercase" id=services>Services</h2>
 			<ul class="nav nav-pills nav-stacked text-center">
 				<li role="presentation">
-					<a href="#" class="text-uppercase">Adopt a dog</a>
+					<a href="#" class="text-uppercase btn-deco center-block">Adopt a dog</a>
 					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
 				</li>
 				<li role="presentation">
-					<a href="#" class="text-uppercase">Adopt a cat</a>
+					<a href="#" class="text-uppercase btn-deco center-block">Adopt a cat</a>
 					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 				</li>
 				<li role="presentation">
-					<a href="#" class="text-uppercase">Adopt a fish</a>
+					<a href="#" class="text-uppercase btn-deco center-block">Adopt a fish</a>
 					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
 				</li>
 			</ul>
